Add java optimal GC options
Co-authored-by: sigonasr2 <sigonasr2@gmail.com>